# PyPerceive

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
code/: dataset_description.json  matpart.json
code/INF-master/BIDS_standardization/: BIDS_input_backend.py  BIDS_input_frontend.ipynb  README.md  bidspath.ipynb  convert_eeg_to_bids.ipynb  convert_sub-001_EphysMedOff01_task-Rest_acq-StimOn_run-01.m  perceive2BIDS_cfg.py  perceive2BIDS_config.py  perceive2BIDS_config_mnebidspipeline.py  percept_perceive2BIDS.ipynb
code/INF-master/Dataset_Filter_Kit/: Dataset_Filter.ipynb  Dataset_Filter.py  Dataset_Filter_backup.ipynb
code/PerceiveImport/: FilterInput.py  PerceiveData_Example.py  PerceiveImport.py  Streaming_class.py  Survey_class.py  find_project_folder.py  select_matfiles.py
code/PerceiveImport/classes/: Condition_Class.py  MainClass2.py  MainClass3.py  Medication_Class.py  Metadata_Class.py  Modality_class.py  MultipleSession_Class.py  PerceiveMainClass.py  PerceiveMetadataClass.py  (+20 more)
code/analysis/: BSSuAbsolutePsd.py  BSSuNormalizationVariation.py  BSSuRawPsd.py  BSSuRelativePsd.py  PeakPSD_frequency.py  plotlyPlots.py
code/notebooks/: chronic_explore.ipynb  percept2BIDS.ipynb  percept2bids.ipynb  percept_playground.ipynb  percept_tf_analysis.ipynb  pyPerceive_Tutorial.ipynb  sync_test.ipynb
code/tmsi-python-interface-main/: installer310_beta_Windows.ps1  installer39_Windows.ps1  requirements310_Windows.txt  requirements39_Windows.txt
code/utils/: anonymise_jsons.py  terminology.json
src/py_perceive/: __init__.py
(+97 files in other folders)
