[project]
name = "PyPerceive"
version = "0.1.0-20240612"
description = "Importing and using Perceive'd Percept data in Python"
authors = [
    { name = "Jeroen G.V. Habets" },
    { name = "Jennifer Kim Behnke" },
    { name = "Richard M. Köhler" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "mne",
    "mne-bids",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "openpyxl",
    "pymatreader",
    "xlrd",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code/PerceiveImport"]
